# data-product-crud-project

./: README.md  docker-compose.yml  pyproject.toml
backend/: crud.py  database.py  models.py  requirements.txt  router.py  schemas.py
docs/: README.md
frontend/: Dockerfile  app.py
frontend/streamlit/: config.toml
