[tool.poetry]
name = "data-product-crud-project"
version = "0.1.0"
description = ""
authors = ["Lorenzo Uriel <lorenzo.uriel@geosiga.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.29"
pydantic = {extras = ["email"], version = "^2.6.4"}
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
streamlit = "^1.33.0"
requests = "^2.31.0"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
